# yeongcheon-vacant-house-agent

./: .env.example  .gitignore  README.md  main.py  project.md  pyproject.toml  test_result.json  user_test.md
data/: .geocoding_cache.json  경상북도 영천시_CCTV_20221129.csv  경상북도 영천시_경로당_20251117.csv  경상북도 영천시_공장_20260310.csv  경상북도 영천시_관내양돈농가현황_20251111.csv  경상북도 영천시_급식소 현황_20230504.csv  경상북도 영천시_노인교실현황_20251210.csv  경상북도 영천시_농어촌민박_20251211.csv  경상북도 영천시_대기배출시설 설치현황_20240820.csv  경상북도 영천시_동네체육시설 현황_20250826.csv  경상북도 영천시_동물병원 현황_20220705.csv  경상북도 영천시_동물약국 현황_20251107.csv  경상북도 영천시_마을회관 현황_20220621.csv  경상북도 영천시_모텔 및 기타 현황_20251110.csv  경상북도 영천시_미용업 현황_20260416.csv  경상북도 영천시_버스쉘터정보_20251103.csv  경상북도 영천시_보건지소및보건진료소현황_20241017.csv  경상북도 영천시_빈집 현황_20250717.csv  경상북도 영천시_숙박업 현황_20240626.csv  경상북도 영천시_영천시 산불데이터_20260422.csv  경상북도 영천시_영천시농산물산지_20210106.csv  경상북도 영천시_원룸 및 다가구주택 현황_20250905.csv  경상북도 영천시_읍면동별기초수급자현황_20250514.csv  경상북도 영천시_의료기관 현황_20260109.csv  경상북도 영천시_의료기기판매업소현황_20260108.csv  경상북도 영천시_일자리유관기관현황_20251205.csv  경상북도 영천시_일자리유관기관현황_20251205.numbers  경상북도 영천시_장례식장 현황_20260112.csv  경상북도 영천시_장애인 복지시설 현황_20251211.csv  경상북도 영천시_제조업체_20250904.csv  경상북도 영천시_지역아동센터현황_20220620.csv  경상북도 영천시_착한가격업소_20260427.csv  경상북도 영천시_체육시설업 현황_20251118.csv  경상북도 영천시_카페 현황_20240404.csv  경상북도 영천시_캠핑장 현황_20251113.csv  경상북도 영천시_토석채취허가 및 채석신고 현황_20250814.csv  경상북도 영천시_행사및축제_20221128.csv  경상북도_영천시_약국현황_20260108.csv  경상북도_영천시_한약방등록현황_20260108.csv  법정동코드 조회자료.csv  (+12 more)
docs/: address_to_latlong.md  building_api.md  data_doc.md  models.md  redevelopment_data_schema.md
scripts/: augment_csv_coordinates.py  (+3 more)
(+38 files in other folders)
